# servant-elm-poc

./: .gitignore  Main.hs  Makefile  Procfile  README.md  app.json  elm-package.json  package.json  servant-elm-poc.cabal  stack.yaml
backend/: Api.hs  Cat.hs  Config.hs  DbConfig.hs  DbUrl.hs  Main.hs
backend/Model/: Cat.hs
frontend/: Command.elm  Init.elm  Main.elm  Message.elm  Model.elm  Update.elm  View.elm
frontend/Styles/: Colors.elm  Styles.elm
frontend/styles/: classes.elm  stylesheet.elm
static/: index.html
