name:               servant-elm-poc
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable servant-elm-poc
  main-is:            backend/Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded -ibackend
  build-depends:      base,
                      bytestring,
                      aeson,
                      servant,
                      servant-server,
                      persistent,
                      persistent-template,
                      persistent-sqlite,
                      persistent-postgresql,
                      parsec,
                      string-conversions,
                      monad-logger,
                      stm,
                      text,
                      transformers,
                      wai,
                      warp
